--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,19 @@
-<div *ngFor="let product of products">
-    <img [src]="product.imageUrl" alt="" width="200">
-    {{ product.name }} {{ product.note }}
+<div class="p-4">
+    <div *ngFor="let products of productsByDay; let i = index">
+        <h3 class="text-lg mb-2">
+            Day {{ i + 1 }}
+            <button class="ml-4 text-sm opacity-30 hover:opacity-100" (click)="removeDay(i)">Remove</button>
+        </h3>
+        <div class="grid grid-cols-8 gap-x-4 gap-y-8">
+            <app-product-card *ngFor="let product of products" [product]="product" (click)="unselectProduct(product)"></app-product-card>
+        </div>
+        <hr class="my-4" />
+    </div>
+    <button class="inline-flex justify-center rounded-md bg-indigo-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500" (click)="addDay()">Add Day</button>
+    <hr class="my-4" />
+
+    <h2 class="text-xl font-bold mb-2">Available</h2>
+    <div class="grid grid-cols-8 gap-x-4 gap-y-8">
+        <app-product-card *ngFor="let product of availableProducts" [product]="product" (click)="selectProduct(product)"></app-product-card>
+    </div>
 </div>
