--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,9 +1,7 @@
 <div class="cursor-pointer hover:opacity-75">
-    <div class="aspect-w-1 aspect-h-1 overflow-hidden rounded-lg bg-gray-100">
-        <img class="object-cover object-center" [src]="product.imageUrl" alt="">
-    </div>
+    <img class="object-cover object-center aspect-[4/3] overflow-hidden rounded-lg bg-gray-100" [src]="product.imageUrl" alt="">
     <div class="mt-2 text-lg">
-        {{ product.price }} P
+        {{ product.price }}p
     </div>
     <div class="font-medium text-gray-900">
         {{ product.name }}
