--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -3,10 +3,10 @@
     <div class="mt-2 text-lg">
         {{ product.price }}p
     </div>
-    <div class="font-medium text-gray-900">
+    <span class="font-medium text-gray-900">
         {{ product.name }}
-    </div>
-    <div class="text-gray-500">
+    </span>
+    <span class="text-gray-500">
         {{ product.note }}
-    </div>
+    </span>
 </div>
