--- a/src/app/components/products-summary/products-summary.component.html
+++ b/src/app/components/products-summary/products-summary.component.html
@@ -1,5 +1,11 @@
-<div class="self-center">
-    Price: <b>{{ price }}p</b>
-    Weight: <b>{{ weight }}g</b>
-    Calories: <b>{{ calories }}</b>
+<div class="self-center flex justify-between gap-4">
+    <div>
+        <span class="text-slate-400">Price: </span><b>{{ price }}p</b>
+    </div>
+    <div>
+        <span class="text-slate-400">Weight: </span><b>{{ weight }}g</b>
+    </div>
+    <div>
+        <span class="text-slate-400">Calories: </span><b>{{ calories }}</b>
+    </div>
 </div>
