--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -3,10 +3,10 @@
     <div class="mt-2 text-lg">
         {{ product.price }}p
     </div>
-    <span class="font-medium text-gray-900">
+    <span class="font-medium text-slate-900">
         {{ product.name }}
     </span>
-    <span class="text-gray-500">
+    <span class="text-slate-400">
         {{ product.note }}
     </span>
 </div>
