--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,17 +1,16 @@
 <div class="p-4">
-    <div class="grid grid-cols-5 gap-x-4">
+    <div class="mb-4 grid grid-cols-5 gap-x-4">
         <div *ngFor="let products of productsByDay; let i = index" class="flex flex-col">
             <h3 class="text-lg mb-2">
                 Day {{ i + 1 }}
                 <button class="ml-4 text-sm opacity-30 hover:opacity-100" (click)="removeDay(i)">Remove</button>
             </h3>
-            <div class="flex-grow mb-4 p-4 grid grid-cols-2 gap-x-4 gap-y-8 bg-gray-100 rounded-lg">
-                <app-product-card *ngFor="let product of products" [product]="product" (click)="unselectProduct(product)"></app-product-card>
-            </div>
-            <div class="mt-auto flex justify-end">
+            <div class="mb-2">
                 <app-products-summary [products]="products"></app-products-summary>
             </div>
-            <hr class="my-4" />
+            <div class="flex-grow p-4 grid grid-cols-2 gap-x-4 gap-y-8 bg-gray-100 rounded-lg">
+                <app-product-card *ngFor="let product of products" [product]="product" (click)="unselectProduct(product)"></app-product-card>
+            </div>
         </div>
     </div>
     <div class="flex justify-between items-center">
