--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,12 +1,16 @@
-<div class="cursor-pointer hover:opacity-75">
-    <img class="object-cover object-center aspect-[4/3] overflow-hidden rounded-lg bg-gray-100" [src]="product.imageUrl" alt="">
-    <div class="mt-2 text-lg">
-        {{ product.price }}p
+<div class="h-full flex flex-col">
+    <div class="mb-2 text-lg flex justify-between">
+        <span class="font-medium">{{ product.price }}p</span>
+        <button *ngIf="add.observed" class="px-3 py-1 rounded-lg ring-1 ring-indigo-600 text-sm opacity-30 hover:opacity-100" (click)="add.emit()">Add</button>
+        <button *ngIf="remove.observed" class="px-3 py-1 rounded-lg ring-1 ring-indigo-600 text-sm opacity-30 hover:opacity-100" (click)="remove.emit()">Remove</button>
     </div>
-    <span class="font-medium text-slate-900">
-        {{ product.name }}
-    </span>
-    <span class="text-slate-400">
-        {{ product.note }}
-    </span>
+    <img class="mb-2 object-cover object-center aspect-[4/3] overflow-hidden rounded-lg bg-gray-100" [src]="product.imageUrl" alt="">
+    <div>
+        <span class="font-medium text-slate-900">
+            {{ product.name }}
+        </span>
+        <span class="text-slate-400">
+            {{ product.note }}
+        </span>
+    </div>
 </div>
