--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -9,7 +9,7 @@
                 <app-products-summary [products]="products"></app-products-summary>
             </div>
             <div class="flex-grow p-4 grid grid-cols-2 gap-x-4 gap-y-8 bg-gray-100 rounded-lg">
-                <app-product-card *ngFor="let product of products" [product]="product" (click)="unselectProduct(product)"></app-product-card>
+                <app-product-card *ngFor="let product of products" [product]="product" (remove)="unselectProduct(product)"></app-product-card>
             </div>
         </div>
     </div>
@@ -24,6 +24,6 @@
 
     <h2 class="text-xl font-bold mb-2">Available</h2>
     <div class="p-4 grid grid-cols-8 gap-x-4 gap-y-8">
-        <app-product-card *ngFor="let product of availableProducts" [product]="product" (click)="selectProduct(product)"></app-product-card>
+        <app-product-card *ngFor="let product of availableProducts" [product]="product" (add)="selectProduct(product)"></app-product-card>
     </div>
 </div>
